# code-challenge-dot-net

./: README.md
backend/: .env  .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seed_data.py  start.py  test_api.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/models/: models.py
backend/app/routers/: check_ins.py  communities.py  people.py
backend/app/services/: check_in_service.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js
