[tool.poetry]
name = "quave-challenge-api"
version = "0.1.0"
description = "Quave Code Challenge API - Event Check-in System"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"
pydantic = {extras = ["email"], version = "^2.5.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"